[package]
name = "pid-viewer"
version = "0.1.0"
edition = "2021"
description = "View and control a PID"
readme = "README.md"
repository = "https://github.com/lihuanshuai/pid-viewer"
license = "MIT"
keywords = ["yew", "trunk", "pid"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20.0", features=["csr"] }
